<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/colorWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_flynews"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_20sdp"
                android:src="@drawable/transprent_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_flynews"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/rl_email_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/iv_email_id"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_email" />

                    <EditText
                        android:id="@+id/et_email1"
                        style="@style/smallPopinsRegularStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/iv_email_id"
                        android:background="@null"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/colorDarkBlack"
                        android:textColorHint="@color/colorDarkGray" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@id/et_email1"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/iv_email_id"
                        android:background="@color/colorLightGray" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/iv_pass"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_padlock"

                        />

                    <EditText
                        android:id="@+id/et_pass"
                        style="@style/smallPopinsRegularStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/iv_pass"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorDarkBlack"
                        android:textColorHint="@color/colorDarkGray" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@+id/et_pass"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/iv_pass"
                        android:background="@color/colorLightGray" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/checkbox_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_weight="1.2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/iv_cBox"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            app:srcCompat="@drawable/ic_inacive_checkbox"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:fontFamily="@font/poppins_light"
                            android:text="@string/remember_me"
                            android:textColor="@color/colorDarkGray"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6" />

                    <TextView
                        android:id="@+id/forgotpass_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1.2"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="end"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="@dimen/_10sdp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_signin"
                    style="@style/SmallPopinsMediumStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:backgroundTint="@color/secondary"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_25sdp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_or_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/or"
                        android:textColor="#939393" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:background="@drawable/fb_btn_bg"
                    android:elevation="@dimen/_2sdp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/iv_f"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_centerVertical="true"
                            android:padding="@dimen/_2sdp"
                            app:srcCompat="@drawable/ic_facebook_logo" />

                        <TextView
                            android:id="@+id/tv_fb_connect"
                            style="@style/smallPopinsRegularStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/iv_f"
                            android:gravity="center"
                            android:text="@string/connect_with_facebook"
                            android:textColor="@color/colorWhite"
                            />
                    </RelativeLayout>


                </RelativeLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="#7e7e7e"
                        android:textSize="@dimen/_12sdp" />

                    <LinearLayout
                        android:id="@+id/tv_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_5sdp"
                        >

                        <TextView
                            android:id="@+id/btn_signup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackground"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/sign_up"
                            android:textColor="@color/colorSkyblue"
                            android:textSize="@dimen/_13sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginTop="@dimen/_minus1sdp"
                            android:background="@color/colorSkyblue" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</layout>
