<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:scrollbars="none"
        android:theme="@style/AppThemeSignup"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_115sdp"
                android:background="@color/primary">

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/mediumPopinsLightStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/welcome_n_to"
                android:textColor="@color/colorWhite"

                />

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_welcome"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/spantaran"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16sdp" />

            <FrameLayout
                android:id="@+id/fl_profile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_below="@+id/tv_app_name"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_10sdp"
                >


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_75sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/user_ico"
                    />

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    app:srcCompat="@drawable/ic_user_add"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_8sdp"
                    />


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fl_profile"
                android:orientation="vertical">


                <RelativeLayout
                    android:id="@+id/rl_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/ic_full_name"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_full_name" />

                    <EditText
                        android:id="@+id/et_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/ic_full_name"
                        android:layout_toRightOf="@+id/ic_full_name"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textColor="@color/colorDarkBlack"
                        android:textColorHint="@color/colorDarkGray"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@+id/ic_full_name"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toEndOf="@+id/ic_full_name"
                        android:layout_toRightOf="@+id/ic_full_name"
                        android:background="@color/colorLightGray" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_email_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/iv_email_id"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_email" />

                    <EditText
                        android:id="@+id/et_email_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/iv_email_id"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/email_id"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/colorDarkBlack"
                        android:textColorHint="@color/colorDarkGray"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@+id/et_email_signup"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toEndOf="@+id/iv_email_id"
                        android:layout_toRightOf="@+id/iv_email_id"
                        android:background="@color/colorLightGray" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/iv_pass"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_padlock" />

                    <EditText
                        android:id="@+id/et_pass_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_pass"
                        android:layout_toRightOf="@+id/iv_pass"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorDarkBlack"
                        android:textColorHint="@color/colorDarkGray"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@+id/et_pass_signup"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toEndOf="@+id/iv_pass"
                        android:layout_toRightOf="@+id/iv_pass"
                        android:background="@color/colorLightGray" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/iv_confirm_pass"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_padlock" />

                    <EditText
                        android:id="@+id/et_confirm_pass_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/iv_confirm_pass"
                        android:layout_toRightOf="@+id/iv_confirm_pass"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorDarkBlack"
                        android:textColorHint="@color/colorDarkGray"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_below="@+id/et_confirm_pass_signup"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/iv_confirm_pass"
                        android:background="@color/colorLightGray" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_signup"
                    style="@style/SmallPopinsMediumStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/secondary"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_light"
                        android:text="@string/already_have_an_account"
                        android:textColor="#7e7e7e"
                        android:textSize="@dimen/_12sdp" />

                    <LinearLayout
                        android:id="@+id/ll_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_5sdp">

                        <TextView
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?android:attr/selectableItemBackground"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/sign_in"
                            android:textColor="@color/colorSkyblue"
                            android:textSize="@dimen/_13sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:layout_marginTop="@dimen/_minus2sdp"
                            android:background="@color/colorSkyblue" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</layout>